--- a/src/app/favorites/Favorites.module.scss
+++ b/src/app/favorites/Favorites.module.scss
@@ -1,4 +1,8 @@
 .favorites {
+  padding-left: 2rem;
+  padding-right: 2rem;
+  max-width: 1200px;
+  margin: 0 auto;
   background-color: #2c3e50;
   color: #ecf0f1;
   padding: 20px;
