--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,30 +9,25 @@
     --foreground: #ededed;
   }
 }
-body {
-  background-color: white;
-  align-items: center;
-  justify-content: center;
-}
-
-/* html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
 
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+}
+
+html,
+body {
+  max-width: 100vw;
+  overflow-x: hidden;
+  color: var(--foreground);
+  background: var(--background);
+  font-family: Arial, Helvetica, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  display: flex; /* Add flex for centering */
+  align-items: center;
+  justify-content: center;
 }
 
 a {
@@ -44,4 +39,4 @@ a {
   html {
     color-scheme: dark;
   }
-} */
+}
