--- a/src/app/search/SearchPage.module.scss
+++ b/src/app/search/SearchPage.module.scss
@@ -1,3 +1,10 @@
+.searchPageWrapper {
+  padding-left: 2rem;
+  padding-right: 2rem;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
 .searchPage {
   text-align: center;
 }
