--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -1,20 +1,46 @@
-.header {
-  background-color: #2c3e50;
-  color: #ecf0f1;
-  padding: 20px;
+.headerWrapper {
+  display: flex;
+  align-items: center;
 
-  nav {
-    display: flex;
-    justify-content: space-around;
+  justify-content: space-between;
 
-    .link {
-      color: #ecf0f1;
-      text-decoration: none;
-      padding: 10px;
-
-      &:hover {
-        text-decoration: underline;
-      }
-    }
+  .headerLogo {
+    background-color: red;
   }
+
+  .headerIcon {
+  }
+
+  .headerTexts {
+    font-weight: 600;
+    font-size: 1.5rem;
+  }
+
+  .headerItems {
+    gap: 10px;
+    display: flex;
+    font-weight: 600;
+    font-size: 1rem;
+  }
+
+  // nav {
+  //   ul {
+  //     list-style: none;
+  //     padding: 0;
+
+  //     li {
+  //       display: inline;
+  //       margin-right: 1rem;
+
+  //       a {
+  //         text-decoration: none;
+  //         color: #333;
+
+  //         &:hover {
+  //           color: #0070f3;
+  //         }
+  //       }
+  //     }
+  //   }
+  // }
 }
