chore: header level styles

--- a/src/app/search/SearchPage.module.scss
+++ b/src/app/search/SearchPage.module.scss
@@ -1,8 +1,7 @@
 .searchPageWrapper {
-  padding-left: 2rem;
-  padding-right: 2rem;
-  max-width: 1200px;
-  margin: 0 auto;
+  pad: 2rem;
+  // max-width: 1200px;
+  // margin: 0 auto;
 }
 
 .searchPage {
