--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -6,6 +6,50 @@
 }
 
 .homePageSnippet {
-  padding: 4rem;
-  background-color: grey;
+  background-image: url('/movie-cover.jpg');
+  background-size: cover;
+  background-position: center;
+  height: 30vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+
+  &::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 1;
+  }
+
+  .textOverlay {
+    font-size: 1.5rem;
+    position: relative;
+    z-index: 2;
+    color: #fbbf24;
+    text-align: center;
+    background-color: rgba(0, 0, 0, 0.7);
+    border-radius: 8px;
+    padding: 20px;
+
+    > p {
+      color: white;
+      font-size: 1rem;
+    }
+  }
+
+  @media (max-width: 768px) {
+    .textOverlay {
+      font-size: 1.2rem;
+      padding: 15px;
+
+      > p {
+        font-size: 0.9rem;
+      }
+    }
+  }
 }
