--- a/src/components/movieList/MovieList.module.scss
+++ b/src/components/movieList/MovieList.module.scss
@@ -1,5 +1,5 @@
 .movies {
-  background-color: #f4f4f4;
+  background-color: #000;
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
