--- a/src/app/favorites/Favorites.module.scss
+++ b/src/app/favorites/Favorites.module.scss
@@ -1,11 +1,13 @@
 .favorites {
-  // padding-left: 2rem;
-  // padding-right: 2rem;
-  // max-width: 1200px;
-  // margin: 0 auto;
-  background-color: #2c3e50;
   color: #ecf0f1;
   padding: 20px;
+
+  h1 {
+    font-size: 24px;
+    color: #fbbf24;
+    text-align: center;
+    margin-bottom: 20px;
+  }
 
   .favoriteGrid {
     display: flex;
@@ -15,7 +17,6 @@
   }
 
   .favoriteCard {
-    background-color: #34495e;
     border-radius: 10px;
     padding: 15px;
     text-align: center;
