--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -46,3 +46,22 @@
     }
   }
 }
+
+@media (max-width: 768px) {
+  .headerWrapper {
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 10px;
+
+    .headerItems {
+      margin-top: 10px;
+      width: 100%;
+      justify-content: flex-end;
+    }
+  }
+
+  .searchBar {
+    margin-top: 10px;
+    width: 100%;
+  }
+}
