--- a/src/components/movieList/MovieList.module.scss
+++ b/src/components/movieList/MovieList.module.scss
@@ -39,8 +39,7 @@
   .movieImage {
     border-bottom: 1px solid #555;
     width: 100%;
-    height: auto;
-    max-height: 250px;
+    height: 350px;
     object-fit: cover;
   }
 
