chore: favorites empty page cleanup

--- a/src/app/favorites/Favorites.module.scss
+++ b/src/app/favorites/Favorites.module.scss
@@ -9,6 +9,13 @@
     margin-bottom: 20px;
   }
 
+  .noFavorites {
+    text-align: center;
+    font-size: 18px;
+    color: #ccc;
+    margin-top: 20px;
+  }
+
   .favoriteGrid {
     display: flex;
     flex-wrap: wrap;
