--- a/src/app/movies/similarMovies/SimilarMovies.module.scss
+++ b/src/app/movies/similarMovies/SimilarMovies.module.scss
@@ -1,35 +1,65 @@
 .carouselContainer {
-  padding: 16px;
-  background-color: #000;
+  position: relative;
+  padding: 20px;
 }
 
 .title {
-  color: white;
   font-size: 24px;
-  margin-bottom: 16px;
+  color: #fbbf24;
+  margin-bottom: 15px;
+  text-align: center;
 }
 
 .embla {
   overflow: hidden;
 }
 
+.emblaViewport {
+  overflow: hidden;
+  width: 100%;
+}
+
 .emblaContainer {
   display: flex;
+  gap: 16px;
 }
 
 .emblaSlide {
-  position: relative;
-  margin-right: 16px;
-  flex: 0 0 auto;
+  min-width: 20%;
+  transition: transform 0.3s ease;
+
+  @media (max-width: 1200px) {
+    min-width: 33.33%; // 3 cards per row
+  }
+
+  @media (max-width: 768px) {
+    min-width: 50%; // 2 cards per row
+  }
 }
 
-.moviePoster {
-  border-radius: 8px;
-  object-fit: cover;
+.emblaPrev,
+.emblaNext {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: #444;
+  color: #fff;
+  border: 1px solid #fbbf24;
+  padding: 8px 12px;
+  cursor: pointer;
+  font-size: 16px;
+  border-radius: 10px;
+  transition: background-color 0.3s;
+
+  &:hover {
+    background-color: #555;
+  }
 }
 
-.movieTitle {
-  text-align: center;
-  margin-top: 8px;
-  font-weight: bold;
+.emblaPrev {
+  left: 10px;
+}
+
+.emblaNext {
+  right: 10px;
 }
