--- a/src/components/movieCard/MovieCard.module.scss
+++ b/src/components/movieCard/MovieCard.module.scss
@@ -5,6 +5,7 @@
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
   transition: transform 0.3s;
   padding: 15px;
+  height: 100%;
 
   &:hover {
     transform: translateY(-4px);
@@ -15,6 +16,7 @@
     border-bottom: 1px solid #555;
     width: 100%;
     height: 350px;
+    max-width: 100%;
     object-fit: cover;
   }
 
