chore: more cleanups

--- a/src/components/movieCard/MovieCard.module.scss
+++ b/src/components/movieCard/MovieCard.module.scss
@@ -20,6 +20,14 @@
     object-fit: cover;
   }
 
+  .infoRow {
+    display: flex;
+    align-items: center;
+
+    gap: 10px;
+    justify-content: flex-start;
+  }
+
   .movieTitle {
     font-size: 16px;
     margin: 8px 0;
@@ -34,9 +42,10 @@
     text-align: center;
   }
 
-  .rating {
+  .ratingsRow {
     display: flex;
     align-items: center;
+    justify-content: space-between;
     font-size: 12px;
     color: #fbbf24;
 
@@ -46,9 +55,17 @@
       margin-right: 5px;
     }
 
+    .votes {
+      display: flex;
+      justify-content: space-between;
+    }
+
     .voteCount {
       font-size: 12px;
       color: #bbb;
+    }
+    .popularity {
+      color: black;
     }
   }
 
