--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -53,3 +53,11 @@
     }
   }
 }
+
+.sectionTitle {
+  font-size: 1rem;
+  font-weight: bold;
+  margin: 20px 0;
+  padding-left: 15px;
+  color: #fbbf24;
+}
