--- a/src/app/similarMovies/SimilarMovies.module.scss
+++ b/src/app/similarMovies/SimilarMovies.module.scss
@@ -1,6 +1,10 @@
 .carouselContainer {
   position: relative;
-  padding: 20px;
+  padding: 10px;
+
+  @media (min-width: 768px) {
+    padding: 20px 40px;
+  }
 }
 
 .title {
@@ -17,6 +21,7 @@
 .emblaViewport {
   overflow: hidden;
   width: 100%;
+  padding: 0 20px;
 }
 
 .emblaContainer {
@@ -45,10 +50,10 @@
   background-color: #444;
   color: #fff;
   border: 1px solid #fbbf24;
-  padding: 8px 12px;
+  padding: 6px 10px;
   cursor: pointer;
-  font-size: 16px;
-  border-radius: 10px;
+  font-size: 14px;
+  border-radius: 8px;
   transition: background-color 0.3s;
 
   &:hover {
@@ -57,9 +62,17 @@
 }
 
 .emblaPrev {
-  left: 10px;
+  left: 20px;
 }
 
 .emblaNext {
-  right: 10px;
+  right: 20px;
+}
+
+// Hide prev and next buttons on mobile
+@media (max-width: 768px) {
+  .emblaPrev,
+  .emblaNext {
+    display: none;
+  }
 }
