chore: final cleanup, final for sure.

--- a/src/app/movies/MovieDetails.module.scss
+++ b/src/app/movies/MovieDetails.module.scss
@@ -42,6 +42,9 @@
     flex-direction: column;
     gap: 15px;
 
+    strong {
+      color: #fbbf24;
+    }
     @media (max-width: 420px) {
       align-items: center;
       text-align: center;
