--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -37,7 +37,7 @@
     a {
       color: #000;
       background: #fbbf24;
-      padding: 5px;
+      padding: 6px 5px;
       border-radius: 3px;
 
       &:hover {
@@ -53,12 +53,14 @@
 
 @media (max-width: 992px) {
   .headerlogo {
+    //remove logo text when its mobile + tablet
     .headerTexts {
       display: none !important;
     }
   }
 
   .headerItems {
+    //remove home button when its mobile + tablet
     .homeLink {
       display: none !important;
     }
