--- a/src/app/similarMovies/SimilarMovies.module.scss
+++ b/src/app/similarMovies/SimilarMovies.module.scss
@@ -59,6 +59,10 @@
   &:hover {
     background-color: #555;
   }
+
+  @media (max-width: 768px) {
+    display: none; // Hide buttons on mobile
+  }
 }
 
 .emblaPrev {
@@ -67,12 +71,4 @@
 
 .emblaNext {
   right: 20px;
-}
-
-// Hide prev and next buttons on mobile
-@media (max-width: 768px) {
-  .emblaPrev,
-  .emblaNext {
-    display: none;
-  }
 }
